--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
         with:
           node-version: 12
           #abaixo ele roda comandos node na maquina
+      - name: Instalar dependencias
+      - run: npm install 
           #npm ci baixa o arquivo package-lock.json na maquina virtual assim tirando erros futuros de compatibilidade
       - run: npm ci
       #npm run build ele roda a build gerada e aplicada no arquivo package.json, ex: "build": "webpack src/app.js -o public/bundle.js" -> onde ele roda o node na maquina
