--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,6 @@ jobs:
           #npm ci baixa o arquivo package-lock.json na maquina virtual assim tirando erros futuros de compatibilidade
       - run: npm ci
       #npm run build ele roda a build gerada e aplicada no arquivo package.json, ex: "build": "webpack src/app.js -o public/bundle.js" -> onde ele roda o node na maquina
-      - run: npm run build
+      # - run: npm run build 
     
      
