--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,3 +33,23 @@ jobs:
         run: |
           npm install -g conventional-changelog-lint
           conventional-changelog-lint --from main --to HEAD
+
+
+  SemanticRelease:
+    runs-on: ubuntu-latest
+    needs: [ValidacaoConventionalCommits]
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 12
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run semantic-release
+        run: npx semantic-release
