--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,4 +52,4 @@ jobs:
         run: npm install
 
       - name: Run semantic-release
-        run: npm semantic-release
+        run: npx semantic-release
