--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,9 @@ jobs:
         run: |
           npm install -g conventional-changelog-lint
           conventional-changelog-lint --from main --to HEAD
-
+          
+      - run: chmod +x node_modules/.bin/semantic-release
+      
       - name: Run semantic-release
         run: npx semantic-release
 
