--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-
+          
+      - uses: actions/setup-node@v4.0.2
+        with:
+          node-version: 20.8.1.
      
       - name: Validação Conventional Commits
         run: |
