--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
           
       - uses: actions/setup-node@v4.0.2
         with:
-          node-version: 'lts'
+          node-version: 12
      
       - name: Validação Conventional Commits
         run: |
@@ -40,6 +40,6 @@ jobs:
       - run: chmod +x node_modules/.bin/semantic-release
       
       - name: Run semantic-release
-        run: npx semantic-release
+        run: npx -p node@v18-lts -c "npx semantic-release"
 
 
