--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,8 +41,8 @@ jobs:
       - run: chmod +x node_modules/.bin/semantic-release
       
       - name: Run semantic-release
-        
-        run: npx -p node@v20-lts -c "npx semantic-release"
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }} 
+         GH_TOKEN: ${{ secrets.GH_TOKEdN }} 
+        run: npx -p node@v20-lts -c "npx semantic-release"
+        
 
