--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
       
       - name: Run semantic-release
         env:
-         GH_TOKEN: ${{ secrets.GH_TOKEdN }} 
+         GH_TOKEN: ${{ secrets.GH_TOKEN }} 
         run: npx -p node@v20-lts -c "npx semantic-release"
         
 
