--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,12 +37,15 @@ jobs:
           npm install -g conventional-changelog-lint
           conventional-changelog-lint --from main --to HEAD
           
-          
+      
       - run: chmod +x node_modules/.bin/semantic-release
       
       - name: Run semantic-release
         env:
          GH_TOKEN: ${{ secrets.GH_TOKEN }} 
-        run: npx -p node@v20-lts -c "npx semantic-release"
+        run: |
+         example-command "$env:GH_TOKEN"
+       
+      - run: npx -p node@v20-lts -c "npx semantic-release"
         
 
