--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,11 +41,10 @@ jobs:
       - run: chmod +x node_modules/.bin/semantic-release
       
       - name: Run semantic-release
-      - shell: bash
+        with: # Set the secret as an input
+         GH_TOKEN: ${{ secrets.GH_TOKEN }}
         env:
          GH_TOKEN: ${{ secrets.GH_TOKEN }} 
-        run: |
-         example-command "$env:GH_TOKEN"
        
       - run: npx -p node@v20-lts -c "npx semantic-release"
         
