--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Run semantic-release
       
         env:
-         GH_TOKEN: ${{ secrets.GH_TOKEN }} 
+         GGITHUB_TOKEN: ${{ secrets.GGITHUB_TOKEN }} 
         
         run: npx -p node@v20-lts -c "npx semantic-release"
         
