--- a/api-rest/package.json
+++ b/api-rest/package.json
@@ -6,6 +6,7 @@
   "type" : "module",
 
   "scripts": {
+    "build" : "",
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
